# wishlist-backend

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  renovate.json
.github/workflows/: build_image.yaml
src/wishlist_backend/: main.py
src/wishlist_backend/database/: defaults.py
src/wishlist_backend/routes/: __init__.py  wish.py
src/wishlist_backend/tags/: metadata.py
